# bitllm

./: .pre-commit-config.yaml  pyproject.toml
src/bitllm/: model.py
tests/unit/: test_bitlinear_layer.py
